[project]
name = "graphrag"
version = "0.1.0"
description = ""
authors = [
    {name = "Paolo Litta",email = "plitta@brembanarolle.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "langchain (>=1.1.0,<2.0.0)",
    "langgraph (>=1.0.4,<2.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "pymilvus (>=2.6.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
