[tool.poetry]
name = "graphrag"
version = "0.1.0"
description = ""
authors = ["Paolo Litta <plitta@brembanarolle.com>"]
readme = "README.md"
packages = [{ include = "graphrag" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
langchain = ">=1.1.0,<2.0.0"
langgraph = ">=1.0.4,<2.0.0"
openai = ">=2.8.1,<3.0.0"
dotenv = ">=0.9.9,<0.10.0"
langchain-openai = ">=1.1.0,<2.0.0"
pymilvus = ">=2.6.4,<3.0.0"
langchain-milvus = ">=0.3.1,<0.4.0"
cohere = "^5.20.0"
langchain-cohere = "^0.5.0"
transformers = "^4.57.3"
techdraw = {git = "git@github.com:PaoloL997/techdraw.git", rev = "main"}
redis = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pre-commit (>=4.5.0,<5.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "interrogate (>=1.7.0,<2.0.0)"
]
